--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
             <div class="carousel">
                 <img src="images/advert1.png" alt="Ad 1" class="carousel-image">
                 <img src="images/advert2.png" alt="Ad 2" class="carousel-image">
-                <img src="imageS/advert3.png" alt="Ad 3" class="carousel-image">
+                <img src="images/advert3.png" alt="Ad 3" class="carousel-image">
             </div>
-            
-        </section>
+                    </section>
         <section id="wishlist">
             <h2>Wishlist</h2>
             <p>Keep track of items you want to buy later.</p>
