--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MokeSell</title>
-    <link rel="stylesheet" href="../FED2024Asg2_P06_Team8/css-folders/style.css">
+    <link rel="stylesheet" href="css-folders/style.css">
 </head>
 <body>
     <header>
@@ -45,9 +45,9 @@
         <section id="homepage" class="center-content">
             <h2>Advertisement</h2>
             <div class="carousel">
-                <img src="../FED2024Asg2_P06_Team8/images/advert1.png" alt="Ad 1" class="carousel-image">
-                <img src="../FED2024Asg2_P06_Team8/images/advert2.png" alt="Ad 2" class="carousel-image">
-                <img src="../FED2024Asg2_P06_Team8/images/advert3.png" alt="Ad 3" class="carousel-image">
+                <img src="images/advert1.png" alt="Ad 1" class="carousel-image">
+                <img src="images/advert2.png" alt="Ad 2" class="carousel-image">
+                <img src="images/advert3.png" alt="Ad 3" class="carousel-image">
             </div>
         </section>
 
@@ -77,6 +77,6 @@
     <footer>
         <p>&copy; 2025 MokeSell</p>
     </footer>
-    <script src="../FED2024Asg2_P06_Team8/js-folders/script.js"></script>
+    <script src="js-folders/script.js"></script>
 </body>
 </html>
