--- a/html-folders/login.html
+++ b/html-folders/login.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="css-folders/login-style.css">
+    <link rel="stylesheet" href="../css-folders/login-style.css">
 </head>
 <body>
-    <div class="login-container">
+    <div class="container">
         <h1>Login</h1>
-        <form action="index.html" method="POST" class="login-form">
+        <form action="../index.html" method="POST" class="form">
             <input type="email" name="email" placeholder="Enter your email..." required>
             <input type="password" name="password" placeholder="Enter your password..." required minlength="8">
             <button type="submit" class="login-button">Log In</button>
         </form>
         <p class="signup-text">
-            Make a new account? <a href="register.html">Sign up</a>
+            Don't have an account? <a href="../html-folders/register.html">Sign up</a>
         </p>
     </div>
+    <script src="js-folders/script.js"></script>
 </body>
 </html>
