--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
             <ul class="nav-links">
                 <li><button class="offcanvas-toggle" aria-label="Toggle Navigation">☰</button></li>
                 <li><h1 class="site-title">MokeSell</h1></li>
-                <li><a href="#homepage">Homepage</a></li>
-                <li><a href="#wishlist">Wishlist</a></li>
-                <li><a href="#listing">Listing</a></li>
+                <li><a href="html-folders/index.html">Homepage</a></li>
+                <li><a href="html-folders/wishlist.html">Wishlist</a></li>
+                <li><a href="html-folders/listing.html">Listing</a></li>
                 <li><input type="text" placeholder="Search for an item..." class="search-bar" id="search-bar"></li>
                 <li><div id="search-suggestions" class="search-suggestions"></div></li>
-                                <li class="notification-container">
+                <li class="notification-container">
                     <button class="icon-button notification-button" title="Notifications">🔔</button>
                     <div class="notification-box">
                         <p>No new notifications.</p>
                     </div>
                 </li>
-                <li><button class="icon-button" title="Shopping Cart">🛒</button></li>
-                <li><button class="icon-button" title="User Profile">👤</button></li>
-                <li><button class="icon-button" title="Settings">⚙</button></li>
-                <li><a href="login.html" class="nav-login-button">Login</a></li>
+                <li><a href="html-folders/cart.html" class="icon-button">🛒</a></li>
+                <li><a href="html-folders/profile.html" class="icon-button">👤</a></li>
+                <li><a href="html-folders/settings.html" class="icon-button">⚙</a></li>
+                <li><a href="html-folders/login.html" class="nav-login-button">Login</a></li>
             </ul>
         </nav>
         <div class="offcanvas-menu">
             <ul>
-                <li><a href="#homepage">🏠 Homepage</a></li>
-                <li><a href="#wishlist">👤 Profile</a></li>
-                <li><a href="#listing">💬 Messages</a></li>
-                <li><a href="#contact">🧑‍🤝‍🧑 Following</a></li>
-                <li><a href="#contact">🛒 Shopping Cart</a></li>
-                <li><a href="#contact">💹 Listing</a></li>
+                <li><a href="html-folders/index.html">🏠 Homepage</a></li>
+                <li><a href="html-folders/profile.html">👤 Profile</a></li>
+                <li><a href="html-folders/messages.html">💬 Messages</a></li>
+                <li><a href="html-folders/following.html">🧑‍🤝‍🧑 Following</a></li>
+                <li><a href="html-folders/cart.html">🛒 Shopping Cart</a></li>
+                <li><a href="html-folders/listing.html">💹 Listing</a></li>
             </ul>
         </div>
     </header>
