removed html-folders/ in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul class="nav-links">
                 <li><button class="offcanvas-toggle" aria-label="Toggle Navigation">☰</button></li>
                 <li><h1 class="site-title">MokeSell</h1></li>
-                <li><a href="html-folders/index.html">Homepage</a></li>
+                <li><a href="index.html">Homepage</a></li>
                 <li><a href="html-folders/wishlist.html">Wishlist</a></li>
                 <li><a href="html-folders/listing.html">Listing</a></li>
                 <li><input type="text" placeholder="Search for an item..." class="search-bar" id="search-bar"></li>
