--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
         <section id="categories" class="content-grid">
             <h2>Categories</h2>
             <div class="grid">
-                <div class="card"><img src="images/cat1.png" alt="Category 1"><p>Cat 1</p></div>
-                <div class="card"><img src="images/cat2.png" alt="Category 2"><p>Cat 2</p></div>
-                <div class="card"><img src="images/cat3.png" alt="Category 3"><p>Cat 3</p></div>
-                <div class="card"><img src="images/cat4.png" alt="Category 4"><p>Cat 4</p></div>
-                <div class="card"><img src="images/cat5.png" alt="Category 5"><p>Cat 5</p></div>
-                <div class="card"><img src="images/cat6.png" alt="Category 6"><p>Cat 6</p></div>
-                <div class="card"><img src="images/cat7.png" alt="Category 7"><p>Cat 7</p></div>
-                <div class="card"><img src="images/cat8.png" alt="Category 8"><p>Cat 8</p></div>
-                <div class="card"><img src="images/cat9.png" alt="Category 9"><p>Cat 9</p></div>
-                <div class="card"><img src="images/cat10.png" alt="Category 10"><p>Cat 10</p></div>
+                <div class="card"><img src="images/electronic&gadgets.avif" alt="Electronics & Gadgets"><p>Electronics & Gadgets</p></div>
+                <div class="card"><img src="images/fashion&apparel.avif" alt="Fashion & Apparel"><p>Fashion & Apparel</p></div>
+                <div class="card"><img src="images/beauty&skincare.avif" alt="Beauty & Skin Care"><p>Beauty & Skin Care</p></div>
+                <div class="card"><img src="images/home&living.avif" alt="Home & Living"><p>Home & Living</p></div>
+                <div class="card"><img src="images/health&wellness.avif" alt="Health & Wellness"><p>Health & Wellness</p></div>
+                <div class="card"><img src="images/grocery&food.avif" alt="Grocery & Food"><p>Grocery & Food</p></div>
+                <div class="card"><img src="images/sports&outdoor.avif" alt="Sports & Outdoor"><p>Sports & Outdoor</p></div>
+                <div class="card"><img src="images/toys&games.avif" alt="Toys & Games"><p>Toys & Games</p></div>
+                <div class="card"><img src="images/automotive&accessories.avif" alt="Automotive & Accessories"><p>Automotive & Accessories</p></div>
+                <div class="card"><img src="images/books&stationery.avif" alt="Books & Stationery"><p>Books & Stationery</p></div>
             </div>
         </section>
 
@@ -80,3 +80,4 @@
     <script src="js-folders/script.js"></script>
 </body>
 </html>
+
