--- a/html-folders/login.html
+++ b/html-folders/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../css-folders/login-style.css">
+    <script src = "loginpage.js"></script>
 </head>
 <body>
     <div class="container">
@@ -17,6 +18,7 @@
         <p class="signup-text">
             Don't have an account? <a href="../html-folders/register.html">Sign up</a>
         </p>
+        <p id="login-msg" style="color: red; display: none;">Invalid email or password</p> <!-- Error message -->
     </div>
     <script src="js-folders/script.js"></script>
 </body>
