--- a/html-folders/listing.html
+++ b/html-folders/listing.html
@@ -25,6 +25,7 @@
                 <li><a href="../html-folders/profile.html" class="icon-button">👤</a></li>
                 <li><a href="../html-folders/settings.html" class="icon-button">⚙</a></li>
                 <li><a href="../html-folders/login.html" class="nav-login-button">Login</a></li>
+                <li><a href="../html-folders/register.html" class="nav-register-button">Register</a></li>
             </ul>
         </nav>
         <div class="offcanvas-menu">
