--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul class="nav-links">
                 <li><button class="offcanvas-toggle" aria-label="Toggle Navigation">☰</button></li>
                 <li><h1 class="site-title">MokeSell</h1></li>
-                <li><a href="html-folders/index.html">Homepage</a></li>
+                <li><a href="index.html">Homepage</a></li>
                 <li><a href="html-folders/wishlist.html">Wishlist</a></li>
                 <li><a href="html-folders/listing.html">Listing</a></li>
                 <li><input type="text" placeholder="Search for an item..." class="search-bar" id="search-bar"></li>
@@ -27,6 +27,7 @@
                 <li><a href="html-folders/profile.html" class="icon-button">👤</a></li>
                 <li><a href="html-folders/settings.html" class="icon-button">⚙</a></li>
                 <li><a href="html-folders/login.html" class="nav-login-button">Login</a></li>
+                <li><a href="html-folders/register.html" class="nav-register-button">Register</a></li>
             </ul>
         </nav>
         <div class="offcanvas-menu">
@@ -75,7 +76,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 MokeSell</p>
+        <p><b>&copy; 2025 MokeSell</b></p>
     </footer>
     <script src="js-folders/script.js"></script>
 </body>
