Added id for login button

--- a/html-folders/login.html
+++ b/html-folders/login.html
@@ -13,7 +13,7 @@
         <form action="../index.html" method="POST" class="form">
             <input type="email" name="email" placeholder="Enter your email..." required>
             <input type="password" name="password" placeholder="Enter your password..." required minlength="8">
-            <button type="submit" class="login-button">Log In</button>
+            <button type="submit" class="login-button" id = "loginsubmit">Log In</button>
         </form>
         <p class="signup-text">
             Don't have an account? <a href="../html-folders/register.html">Sign up</a>
