--- a/html-folders/settings.html
+++ b/html-folders/settings.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Template</title>
+    <title>MokeSell</title>
     <link rel="stylesheet" href="../css-folders/style.css">
+    <script src="../js-folders/script.js"></script>
 </head>
 <body>
     <header>
@@ -15,31 +16,54 @@
                 <li><a href="../index.html">Homepage</a></li>
                 <li><a href="../html-folders/wishlist.html">Wishlist</a></li>
                 <li><a href="../html-folders/listing.html">Listing</a></li>
-                <li><input type="text" placeholder="Search..." class="search-bar" id="search-bar"></li>
+                <li><input type="text" placeholder="Search for an item..." class="search-bar" id="search-bar"></li>
                 <li><div id="search-suggestions" class="search-suggestions"></div></li>
                 <li class="notification-container">
-                    <button class="icon-button notification-button">🔔</button>
-                    <div class="notification-box"><p>No new notifications.</p></div>
+                    <button class="icon-button notification-button" title="Notifications">🔔</button>
+                    <div class="notification-box">
+                        <p>No new notifications.</p>
+                    </div>
                 </li>
                 <li><a href="../html-folders/cart.html" class="icon-button">🛒</a></li>
                 <li><a href="../html-folders/profile.html" class="icon-button">👤</a></li>
                 <li><a href="../html-folders/settings.html" class="icon-button">⚙</a></li>
                 <li><a href="../html-folders/login.html" class="nav-login-button">Login</a></li>
-                <li><a href="..html-folders/register.html" class="nav-register-button">Register</a></li>
+                <li><a href="../html-folders/register.html" class="nav-register-button">Register</a></li>
             </ul>
         </nav>
         <div class="offcanvas-menu">
             <ul>
-                <li><a href="../index.html">🏠 Homepage</a></li>
-                <li><a href="../html-folders/profile.html">👤 Profile</a></li>
-                <li><a href="../html-folders/messages.html">💬 Messages</a></li>
-                <li><a href="../html-folders/following.html">🧑‍🤝‍🧑 Following</a></li>
-                <li><a href="../html-folders/cart.html">🛒 Cart</a></li>
-                <li><a href="../html-folders/listing.html">💹 Listing</a></li>
+                <li><a href="index.html">🏠 Homepage</a></li>
+                <li><a href="html-folders/profile.html">👤 Profile</a></li>
+                <li><a href="html-folders/messages.html">💬 Messages</a></li>
+                <li><a href="html-folders/following.html">🧑‍🤝‍🧑 Following</a></li>
+                <li><a href="html-folders/cart.html">🛒 Shopping Cart</a></li>
+                <li><a href="html-folders/listing.html">💹 Listing</a></li>
             </ul>
         </div>
     </header>
+    <div class="profile-wrapper">
+        <div class="profile-container">
+        <h2>Edit Profile</h2>
+        <p class="section-title">Public Profile</p>
+        
+        <form class= "profile-form">
+            <label for = "username"><b>Username</b></label>
+            <input type ="text" id = "username" name = "username">
 
-    <script src="../js-folders/script.js"></script>
+            <label for = "first-name"><b>First name</b></label>
+            <input type = "text" id = "first-name" name = "first-name">
+
+            <label for = "last-name"><b>Last name</b></label>
+            <input type = "text" id = "last-name" name = "last-name">
+
+            <label for = "bio"><b>Bio</b></label>
+            <input type = "text" id = "bio" name = "bio">
+        </form>
+            <div class = "button-for-login">
+            <a href="../html-folders/settings.html" class="nav-login-button">Confirm changes</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
