added restdb login/register added welcome message & logout

--- a/html-folders/register.html
+++ b/html-folders/register.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="../css-folders/login-style.css">
-    <script src = "register.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>Register</h1>
-        <form id="register-form" class="form" onsubmit="handleRegister(event)">
+        <form id="register-form" class="form">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" placeholder="Choose a username..." required>
             <label for="email">Email</label>
