--- a/html-folders/login.html
+++ b/html-folders/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../css-folders/login-style.css">
-    <script src="loginpage.js" defer></script> <!-- Ensure script is deferred -->
+    <script src="loginpage.js" defer></script> 
 </head>
 <body>
     <div class="container">
@@ -18,7 +18,7 @@
         <p class="signup-text">
             Don't have an account? <a href="../html-folders/register.html">Sign up</a>
         </p>
-        <p id="login-msg" style="color: red; display: none;">Invalid email or password</p> <!-- Error message -->
+        <p id="login-msg" style="color: red; display: none;">Invalid email or password</p> 
     </div>
     <script src="../js-folders/script.js"></script>
 </body>
