--- a/html-folders/cart.html
+++ b/html-folders/cart.html
@@ -14,11 +14,11 @@
         <nav>
             <ul class="nav-links">
                 <li><button class="offcanvas-toggle" aria-label="Toggle Navigation">☰</button></li>
-                <li><h1 class="site-title">MokeSell</h1></li>
+                <li><h1 class="site-title"><b>MokeSell</b></h1></li>
                 <li><a href="../index.html">Homepage</a></li>
                 <li><a href="../html-folders/wishlist.html">Wishlist</a></li>
                 <li><a href="../html-folders/listing.html">Listing</a></li>
-                <li><input type="text" placeholder="Search..." class="search-bar" id="search-bar"></li>
+                <li><input type="text" placeholder="Search for an item..." class="search-bar" id="search-bar"></li>
                 <li><div id="search-suggestions" class="search-suggestions"></div></li>
                 <li class="notification-container">
                     <button class="icon-button notification-button">🔔</button>
