--- a/html-folders/messages.html
+++ b/html-folders/messages.html
@@ -15,7 +15,7 @@
                 <li><a href="../index.html">Homepage</a></li>
                 <li><a href="../html-folders/wishlist.html">Wishlist</a></li>
                 <li><a href="../html-folders/listing.html">Listing</a></li>
-                <li><input type="text" placeholder="Search..." class="search-bar" id="search-bar"></li>
+                <li><input type="text" placeholder="Search for an item..." class="search-bar" id="search-bar"></li>
                 <li><div id="search-suggestions" class="search-suggestions"></div></li>
                 <li class="notification-container">
                     <button class="icon-button notification-button">🔔</button>
