--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul class="nav-links">
                 <li><button class="offcanvas-toggle" aria-label="Toggle Navigation">☰</button></li>
-                <li><h1 class="site-title">MokeSell</h1></li>
+                <li><h1 class="site-title"><b>MokeSell</b></h1></li>
                 <li><a href="index.html">Homepage</a></li>
                 <li><a href="html-folders/wishlist.html">Wishlist</a></li>
                 <li><a href="html-folders/listing.html">Listing</a></li>
