--- a/html-folders/wishlist.html
+++ b/html-folders/wishlist.html
@@ -50,14 +50,14 @@
 		<div class="container">
 	        <div class="row">
 			    <div class="col-md-12">
-			        <div class="main-heading mb-10">My wishlist</div>
+			        <div class="main-heading mb-10"><b>My wishlist</b></div>
 			        <div class="table-wishlist">
 				        <table cellpadding="0" cellspacing="0" border="0" width="100%">
 				        	<thead>
 					        	<tr>
-					        		<th width="45%">Product Name</th>
-					        		<th width="15%">Unit Price</th>
-					        		<th width="15%">Stock Status</th>
+					        		<th width="45%"><b>Product Name</b></th>
+					        		<th width="15%"><b>Unit Price</b></th>
+					        		<th width="15%"><b>Stock Status</b></th>
 					        		<th width="15%"></th>
 					        		<th width="10%"></th>
 					        	</tr>
