--- a/html-folders/wishlist.html
+++ b/html-folders/wishlist.html
@@ -38,7 +38,7 @@
                 <li><a href="../html-folders/profile.html">👤 Profile</a></li>
                 <li><a href="../html-folders/messages.html">💬 Messages</a></li>
                 <li><a href="../html-folders/following.html">🧑‍🤝‍🧑 Following</a></li>
-                <li><a href="../html-folders/cart.html">🛒 Cart</a></li>
+                <li><a href="../html-folders/cart.html">🛒 Shopping Cart</a></li>
                 <li><a href="../html-folders/listing.html">💹 Listing</a></li>
             </ul>
         </div>
