--- a/html-folders/cart.html
+++ b/html-folders/cart.html
@@ -44,7 +44,7 @@
     </header>
 
 
-    <section class="h-100 h-custom" style="background-color: #d2c9ff;">
+    <section class="h-100 h-custom" style="background-color: #ECF0F1;">
         <div class="container py-5 h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12">
