--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MokeSell</title>
     <link rel="stylesheet" href="css-folders/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="js-folders/script.js"></script>
 </head>
 <body>
     <header>
@@ -76,12 +79,121 @@
             <h2>For You</h2>
             <div id="product-grid" class="grid">
             </div>
+            <section>
+                <div class="container my-5">        
+                  <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
+                      <div class="card w-100 my-2 shadow-2-strong">
+                        <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/1.webp" class="card-img-top" style="height: 250px; object-fit: contain;" />
+                        <div class="card-body d-flex flex-column">
+                          <h5 class="card-title">GoPro HERO6 4K Action Camera - Black</h5>
+                          <p class="card-text">$790.50</p>
+                          <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
+                            <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
+                            <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
+                      <div class="card w-100 my-2 shadow-2-strong">
+                        <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/2.webp" class="card-img-top" style="height: 250px; object-fit: contain;" />
+                        <div class="card-body d-flex flex-column">
+                          <h5 class="card-title">Canon camera 20x zoom, Black color EOS 2000</h5>
+                          <p class="card-text">$500.00</p>
+                          <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
+                            <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
+                            <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
+                      <div class="card w-100 my-2 shadow-2-strong">
+                        <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/3.webp" class="card-img-top" style="height: 250px; object-fit: contain;" />
+                        <div class="card-body d-flex flex-column">
+                          <h5 class="card-title">Xiaomi Redmi 8 Original Global Version 4GB</h5>
+                          <p class="card-text">$220.00</p>
+                          <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
+                            <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
+                            <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
+                      <div class="card w-100 my-2 shadow-2-strong">
+                        <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/4.webp" class="card-img-top" style="height: 250px; object-fit: contain;" />
+                        <div class="card-body d-flex flex-column">
+                          <h5 class="card-title">Apple iPhone 12 Pro 6.1" RAM 6GB 512GB Unlocked</h5>
+                          <p class="card-text">$1200.00</p>
+                          <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
+                            <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
+                            <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
+                      <div class="card w-100 my-2 shadow-2-strong">
+                        <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/5.webp" class="card-img-top" style="height: 250px; object-fit: contain;" />
+                        <div class="card-body d-flex flex-column">
+                          <h5 class="card-title">Apple Watch Series 1 Sport Case 38mm Black</h5>
+                          <p class="card-text">$590.50</p>
+                          <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
+                            <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
+                            <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
+                      <div class="card w-100 my-2 shadow-2-strong">
+                        <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/6.webp" class="card-img-top" style="height: 250px; object-fit: contain;" />
+                        <div class="card-body d-flex flex-column">
+                          <h5 class="card-title">Classic Watch for Men</h5>
+                          <p class="card-text">$120.00</p>
+                          <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
+                            <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
+                            <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
+                      <div class="card w-100 my-2 shadow-2-strong">
+                        <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/7.webp" class="card-img-top" style="height: 250px; object-fit: contain;" />
+                        <div class="card-body d-flex flex-column">
+                          <h5 class="card-title">Gaming Headset 32db Blackbuilt in mic</h5>
+                          <p class="card-text">$99.50</p>
+                          <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
+                            <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
+                            <a href="#!" class="btn btn-light border icon-hover px-2 pt-2"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
+                      <div class="card w-100 my-2 shadow-2-strong">
+                        <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/8.webp" class="card-img-top" style="height: 250px; object-fit: contain;" />
+                        <div class="card-body d-flex flex-column">
+                          <h5 class="card-title">Street-wear Bag for Men and Women</h5>
+                          <p class="card-text">$20.00</p>
+                          <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
+                            <a href="#!" class="btn btn-primary shadow-0 me-1">Add to cart</a>
+                            <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="fas fa-heart fa-lg text-secondary px-1"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
         </section>
     </main>
 
     <footer>
         <p><b>&copy; 2025 MokeSell</b></p>
     </footer>
-    <script src="js-folders/script.js"></script>
 </body>
 </html>
