--- a/html-folders/login.html
+++ b/html-folders/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../css-folders/login-style.css">
+    <link rel="stylesheet" href="../css-folders/login.css">
     <script src="loginpage.js" defer></script> 
 </head>
 <body>
