Small change to cart page and added Checkout page + a "Thank You" page after purchasing

--- a/html-folders/cart.html
+++ b/html-folders/cart.html
@@ -202,8 +202,7 @@
                         </div>
       
                         <a href = "../html-folders/checkout.html" class="btn btn-dark btn-block btn-lg"
-                          data-mdb-ripple-color="dark">Checkout</a>
-      
+                          data-mdb-ripple-color="dark" style="display: flex; justify-content: center; align-items: center;">Checkout</a>
                       </div>
                     </div>
                   </div>
