added welcome message in navbars

--- a/html-folders/cart.html
+++ b/html-folders/cart.html
@@ -31,8 +31,11 @@
                 <li><a href="../html-folders/register.html" class="nav-register-button">Register</a></li>
             </ul>
         </nav>
+        <div id="welcome-navbar" class="welcome-message">Welcome, Guest</div>
+
         <div class="offcanvas-menu">
-            <ul>
+          <div id="welcome-offcanvas" class="welcome-message">Welcome, Guest</div>
+          <ul>
                 <li><a href="../index.html">🏠 Homepage</a></li>
                 <li><a href="../html-folders/profile.html">👤 Profile</a></li>
                 <li><a href="../html-folders/messages.html">💬 Messages</a></li>
