--- a/html-folders/settings.html
+++ b/html-folders/settings.html
@@ -31,7 +31,10 @@
                 <li><a href="../html-folders/register.html" class="nav-register-button">Register</a></li>
             </ul>
         </nav>
+        <div id="welcome-navbar" class="welcome-message">Welcome, Guest</div>
+
         <div class="offcanvas-menu">
+            <div id="welcome-offcanvas" class="welcome-message">Welcome, Guest</div>
             <ul>
                 <li><a href="index.html">🏠 Homepage</a></li>
                 <li><a href="html-folders/profile.html">👤 Profile</a></li>
