--- a/html-folders/profile.html
+++ b/html-folders/profile.html
@@ -32,6 +32,8 @@
         <div id="welcome-navbar" class="welcome-message">Welcome, Guest</div>
 
         <div class="offcanvas-menu">
+            <div id="welcome-offcanvas" class="welcome-message">Welcome, Guest</div>
+
             <ul>
                 <li><a href="../index.html">🏠 Homepage</a></li>
                 <li><a href="../html-folders/profile.html">👤 Profile</a></li>
