Added game feature.

--- a/html-folders/cart.html
+++ b/html-folders/cart.html
@@ -42,6 +42,7 @@
                 <li><a href="../html-folders/following.html">🧑‍🤝‍🧑 Following</a></li>
                 <li><a href="../html-folders/cart.html">🛒 Shopping Cart</a></li>
                 <li><a href="../html-folders/listing.html">💹 Listing</a></li>
+                <li><a href="../html-folders/game.html">🎮 Game</a></li>
             </ul>
         </div>
     </header>
