--- a/html-folders/product.html
+++ b/html-folders/product.html
@@ -31,6 +31,17 @@
                 <li><a href="../html-folders/register.html" class="nav-register-button">Register</a></li>
             </ul>
         </nav>
+        <div class="offcanvas-menu">
+          <ul>
+              <li><a href="../index.html">🏠 Homepage</a></li>
+              <li><a href="../html-folders/profile.html">👤 Profile</a></li>
+              <li><a href="../html-folders/messages.html">💬 Messages</a></li>
+              <li><a href="../html-folders/following.html">🧑‍🤝‍🧑 Following</a></li>
+              <li><a href="../html-folders/cart.html">🛒 Cart</a></li>
+              <li><a href="../html-folders/listing.html">💹 Listing</a></li>
+              <li><a href="../html-folders/game.html">🎮 Game</a></li>
+          </ul>
+      </div>
         <div id="welcome-navbar" class="welcome-message">Welcome, Guest</div>
     </header>
 
