--- a/html-folders/messages.html
+++ b/html-folders/messages.html
@@ -36,6 +36,7 @@
                 <li><a href="../html-folders/following.html">🧑‍🤝‍🧑 Following</a></li>
                 <li><a href="../html-folders/cart.html">🛒 Cart</a></li>
                 <li><a href="../html-folders/listing.html">💹 Listing</a></li>
+                <li><a href="../html-folders/game.html">🎮 Game</a></li>
             </ul>
         </div>
     </header>
