--- a/html-folders/cart.html
+++ b/html-folders/cart.html
@@ -220,22 +220,21 @@
         function checkPromo() {
             let promoCode = document.getElementById("promoInput").value.trim();
             let message = document.getElementById("message");
-            let originalPrice = 133.00; // Base price
+            let originalPrice = 133.00; 
             let discountedPriceElement = document.getElementById("discountedPrice");
     
             if (promoCode.toLowerCase() === "hello") {
-                let discountPrice = originalPrice * 0.8; // 20% discount
+                let discountPrice = originalPrice * 0.8; 
                 message.innerHTML = "✅ Promo applied! You get a 20% discount.";
                 message.style.color = "green";
                 discountedPriceElement.innerHTML = `$${discountPrice.toFixed(2)}`;
             } else {
                 message.innerHTML = "❌ Invalid promo code. Try again.";
                 message.style.color = "red";
-                discountedPriceElement.innerHTML = `$${originalPrice.toFixed(2)}`; // Reset price
+                discountedPriceElement.innerHTML = `$${originalPrice.toFixed(2)}`;
             }
         }
     
-        // Trigger on Enter key press
         document.getElementById("promoInput").addEventListener("keypress", function(event) {
             if (event.key === "Enter") {
                 checkPromo();
