--- a/html-folders/wishlist.html
+++ b/html-folders/wishlist.html
@@ -29,7 +29,7 @@
                 <li><a href="../html-folders/profile.html" class="icon-button">👤</a></li>
                 <li><a href="../html-folders/settings.html" class="icon-button">⚙</a></li>
                 <li><a href="../html-folders/login.html" class="nav-login-button">Login</a></li>
-                <li><a href="..html-folders/register.html" class="nav-register-button">Register</a></li>
+                <li><a href="../html-folders/register.html" class="nav-register-button">Register</a></li>
             </ul>
         </nav>
 		<div id="welcome-navbar" class="welcome-message">Welcome, Guest</div>
