--- a/html-folders/register.html
+++ b/html-folders/register.html
@@ -10,13 +10,13 @@
     <div class="container">
         <h1>Register</h1>
         <form id="register-form" class="form">
-            <label for="username">Username</label>
+            <label for="username"><b>Username</b></label>
             <input type="text" id="username" name="username" placeholder="Choose a username..." required>
-            <label for="email">Email</label>
+            <label for="email"><b>Email</b></label>
             <input type="email" id="email" name="email" placeholder="Enter your email..." required>
-            <label for="password">Password</label>  
+            <label for="password"><b>Password</b></label>  
             <input type="password" id="password" name="password" placeholder="Enter your password..." required minlength="8">
-            <button type="submit" class="register-button">Register</button>
+            <button type="submit" class="register-button"><b>Register</b></button>
         </form>
         <p class="signup-text">
             Already have an account? <a href="../html-folders/login.html">Log in</a>
