added listing into profile

--- a/html-folders/profile.html
+++ b/html-folders/profile.html
@@ -76,8 +76,7 @@
             </div>            
 
             <h3>Listing</h3>
-            <div class="listing-container">
-                <p>This is where the user's listings will go.</p>
+            <div class="product-container" id="product-container">
             </div>
         </div>
     </section>
