--- a/html-folders/wishlist.html
+++ b/html-folders/wishlist.html
@@ -122,5 +122,13 @@
 			</div>
 		</div>
 	</div>
+	<footer>
+		<p>&copy; 2025 MokeSell. All rights reserved.</p>
+		<p>
+			MokeSell is an online marketplace for buying and selling products. All transactions and listings are the responsibility of individual users. Please refer to our 
+			<a href="terms.html">Terms of Service</a> and 
+			<a href="privacy.html">Privacy Policy</a> for more details.
+		</p>
+	</footer>
 </body>
 </html>
