Fixed github link to index.html

--- a/html-folders/game.html
+++ b/html-folders/game.html
@@ -57,8 +57,8 @@
         function endGame(win) {
             gameEnded = true;
             document.body.innerHTML = win ? 
-                '<h1>You won! Enter "hello" in the Promo Code in your next purchase to get 20% off!</h1><a href="/index.html">Back to Home Page</a>' :
-                '<h1>Sorry you lost.</h1><a href="/index.html">Back to Home Page</a>';
+                '<h1>You won! Enter "hello" in the Promo Code in your next purchase to get 20% off!</h1><a href="../index.html">Back to Home Page</a>' :
+                '<h1>Sorry you lost.</h1><a href="../index.html">Back to Home Page</a>';
         }
         
         function spawnTinyImage() {
