added remove listing button able to view added listing now

--- a/html-folders/listing.html
+++ b/html-folders/listing.html
@@ -53,6 +53,8 @@
                 <p class="add-listing-text">Add your own listing</p>
                 <a href="../html-folders/addlisting.html" class="add-listing-btn">+ Add Listing</a>
             </div>
+            <button id="clear-all-btn" class="clear-all-btn">Clear All Listings</button>
+
     </main>
     
 
