edit profile now able to edit pfp

--- a/html-folders/profile.html
+++ b/html-folders/profile.html
@@ -51,8 +51,9 @@
             <div class="profile-info-container">
                 <div class="profile-header">
                     <div class="profile-picture">
-                        <img src="images/profilepfp.jpg" alt="Profile Picture" class="profile-img">
+                        <img src="images/profilepfp.jpg" alt="Profile Picture" id="profile-img" class="profile-img">
                     </div>
+                    
                     <div class="profile-info">
                         <h1 id="profile-username">Guest</h1>
                         <p id="profile-name">
