--- a/html-folders/settings.html
+++ b/html-folders/settings.html
@@ -52,6 +52,12 @@
             <p class="section-title">Public Profile</p>
             
             <form class="profile-form">
+
+                <div class="profile-picture">
+                    <img src="images/profilepfp.jpg" alt="Profile Picture" id="profile-img" class="profile-img">
+                    <input type="file" id="profile-upload" accept="image/*" class="profile-upload-btn">
+                </div>
+                
                 <label for="username"><b>Username</b></label>
                 <input type="text" id="username" name="username" value="">
 
