--- a/html-folders/settings.html
+++ b/html-folders/settings.html
@@ -36,7 +36,7 @@
         <div class="offcanvas-menu">
             <div id="welcome-offcanvas" class="welcome-message">Welcome, Guest</div>
             <ul>
-                <li><a href="index.html">🏠 Homepage</a></li>
+                <li><a href="../index.html">🏠 Homepage</a></li>
                 <li><a href="html-folders/profile.html">👤 Profile</a></li>
                 <li><a href="html-folders/messages.html">💬 Messages</a></li>
                 <li><a href="html-folders/following.html">🧑‍🤝‍🧑 Following</a></li>
