Realised the others has this error as well, should all be fixed now.

--- a/html-folders/settings.html
+++ b/html-folders/settings.html
@@ -37,11 +37,11 @@
             <div id="welcome-offcanvas" class="welcome-message">Welcome, Guest</div>
             <ul>
                 <li><a href="../index.html">🏠 Homepage</a></li>
-                <li><a href="html-folders/profile.html">👤 Profile</a></li>
-                <li><a href="html-folders/messages.html">💬 Messages</a></li>
-                <li><a href="html-folders/following.html">🧑‍🤝‍🧑 Following</a></li>
-                <li><a href="html-folders/cart.html">🛒 Shopping Cart</a></li>
-                <li><a href="html-folders/listing.html">💹 Listing</a></li>
+                <li><a href="../html-folders/profile.html">👤 Profile</a></li>
+                <li><a href="../html-folders/messages.html">💬 Messages</a></li>
+                <li><a href="../html-folders/following.html">🧑‍🤝‍🧑 Following</a></li>
+                <li><a href="../html-folders/cart.html">🛒 Shopping Cart</a></li>
+                <li><a href="../html-folders/listing.html">💹 Listing</a></li>
                 <li><a href="../html-folders/game.html">🎮 Game</a></li>
             </ul>
         </div>
