Added comments for external code

--- a/html-folders/cart.html
+++ b/html-folders/cart.html
@@ -47,6 +47,7 @@
         </div>
     </header>
 
+<!--Shopping cart page : https://mdbootstrap.com/docs/standard/extended/shopping-carts/-->
 
     <section class="h-100 h-custom" style="background-color: #ECF0F1;">
         <div class="container py-5 h-100">
