--- a/html-folders/messages.html
+++ b/html-folders/messages.html
@@ -44,6 +44,8 @@
         </div>
     </header>
 
+    <!--Message page: https://www.bootdey.com/snippets/view/white-chat#html-->
+    
     <main class="content">
         <div class="container p-0" style="max-height: 1200px;">
     
