--- a/html-folders/wishlist.html
+++ b/html-folders/wishlist.html
@@ -49,6 +49,7 @@
     </header>
 
 
+<!--Wishlist page : https://bootsnipp.com/snippets/ElXol-->
 
 	<div class="cart-wrap">
 		<div class="container">
