--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             </div>
         </section>
 
+        <!--Home page For you product list: https://mdbootstrap.com/snippets/standard/mdbootstrap/4852149?view=project#!-->
         <section id="for-you" class="content-grid">
             <h2>For You</h2>
             <div id="product-grid" class="grid">
