--- a/html-folders/product.html
+++ b/html-folders/product.html
@@ -45,6 +45,8 @@
         <div id="welcome-navbar" class="welcome-message">Welcome, Guest</div>
     </header>
 
+    <!--Product page: https://designmodo.com/create-product-page/-->
+    
     <main class="container">
         <div class="left-column">
             <img id="product-image" src="../images/default.jpg" alt="Product Image">
